--- a/src/components/viewer/Viewer.module.css
+++ b/src/components/viewer/Viewer.module.css
@@ -9,6 +9,11 @@
   box-sizing: border-box;
 }
 
+.ViewerLayoutLight {
+  background-image: radial-gradient(#e3e3e3 1px, transparent 0),
+    radial-gradient(#e3e3e3 1px, transparent 0);
+}
+
 .ViewerInactiveCover {
   width: 100%;
   height: 100%;
