--- a/src/components/MainLayout.module.css
+++ b/src/components/MainLayout.module.css
@@ -1,22 +1,25 @@
 .MainLayoutContainer {
-    height: 100vh;
-    width: 100vw;
-    margin: 0;
-    padding: 0;
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .MainLayoutContentContainer {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  height: 100%;
+  box-sizing: border-box;
 }
 
 .MainLayoutTopbarContainer {
-    flex: none
+  flex: none;
 }
 
 .MainLayoutViewerContainer {
-    flex: 1 1 auto;
-    width: 100%;
-    height: 100%;
+  flex: 1 1 auto;
+  width: 100%;
+  max-height: 100%;
 }
