--- a/src/components/viewer/Viewer.module.css
+++ b/src/components/viewer/Viewer.module.css
@@ -5,8 +5,9 @@
   background-attachment: fixed;
   background-size: 50px 50px;
   width: 100%;
+  max-height: 100%;
   height: 100%;
-  box-sizing: border-box;
+  position: relative;
 }
 
 .ViewerLayoutLight {
@@ -30,6 +31,7 @@
 
 .ViewerCanvasComponentContainer {
   width: 100%;
+  max-height: 100%;
   height: 100%;
   box-sizing: border-box;
 }
