--- a/src/components/sidebar/Sidebar.module.css
+++ b/src/components/sidebar/Sidebar.module.css
@@ -21,6 +21,7 @@
   overflow: hidden auto;
   height: 100%;
   padding: 0 !important;
+  scrollbar-width: none;
 }
 
 .SidebarCollapseGroupContainer::-webkit-scrollbar {
