--- a/src/components/viewer/Viewer.module.css
+++ b/src/components/viewer/Viewer.module.css
@@ -7,7 +7,6 @@
   width: 100%;
   max-height: 100%;
   height: 100%;
-  position: relative;
 }
 
 .ViewerLayoutLight {
@@ -31,7 +30,9 @@
 
 .ViewerCanvasComponentContainer {
   width: 100%;
-  max-height: 100%;
   height: 100%;
+  display: block;
   box-sizing: border-box;
+  overflow: hidden;
+  padding: 2px;
 }
