--- a/src/components/sidebar/Sidebar.module.css
+++ b/src/components/sidebar/Sidebar.module.css
@@ -2,7 +2,9 @@
   padding: 16pt;
   height: 100%;
   display: block;
-  box-sizing: border-box
+  box-sizing: border-box;
+  overflow-x: hidden;
+  position: relative;
 }
 
 .SidebarLayout {
