--- a/src/components/topbar/Topbar.module.css
+++ b/src/components/topbar/Topbar.module.css
@@ -3,26 +3,30 @@
   display: flex;
   border-bottom: thin solid #333;
   width: 100%;
-  box-sizing: border-box
+  box-sizing: border-box;
+}
+
+.TopbarLayout.TopbarLayoutLight {
+  border-bottom-color: #eaeaea;
 }
 
 .TopbarLayoutContentContainer {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  align-items: center;
 }
 
 .TopbarLayoutURIFormContainer {
-    flex: 1 1 auto;
-    width: 100%;
+  flex: 1 1 auto;
+  width: 100%;
 }
 
 .TopbarLayoutRightGroupContainer {
-    flex: none;
-    margin-left: 16pt;
+  flex: none;
+  margin-left: 16pt;
 }
 
 .TopbarDatabaseURIForm {
-    max-width: 1200px;
+  max-width: 1200px;
 }
